fix: aterando header para melhor legibilidade, resposividade e SEO

--- a/src/components/Header/_components/NavItem/NavItem.css
+++ b/src/components/Header/_components/NavItem/NavItem.css
@@ -5,4 +5,20 @@
   font-weight: var(--text-strong-weight);
   text-decoration: none;
   text-transform: uppercase;
+  position: relative;
+}
+
+.nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 0;
+  height: 2px;
+  background-color: var(--orange-primary);
+  transition: width 0.3s ease;
+}
+
+.nav-link:hover::after {
+  width: 100%;
 }
